--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,6 @@ description: >- # this means to ignore newlines until "baseurl:"
   photos about surfing. You can follow the updates with the
   RSS feed, email a private message, or post a public comment
   at the respective Github Issue.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 remote_theme: jekyll/minima
@@ -19,29 +15,10 @@ plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-#
-
 minima:
   skin: dark
+  social_links:
+    github: epidrome
 
 collections:
   photos:
