added nanogallery and images

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ author:
   email: surfer@epidro.me
 description: >- # this means to ignore newlines until "baseurl:"
   Image gallery (similar to Instagram, minus the vanity) with
-  photos about surfing. You can follow the updates with the
-  RSS feed, email a private message, or post a public comment
+  photos about surfing. You can follow the updates by watching
+  the repository, email a private message, or post a public comment
   at the respective Github Issue.
 
 # Build settings
@@ -20,15 +20,20 @@ minima:
   social_links:
     github: epidrome
 
-collections:
-  photos:
-    output: true
-    permalink: /:slug
+photos:
+ - img: 86270309-b822bf80-bbd3-11ea-9e17-889dc37ef25b.jpg 
+ - img: 86269433-69285a80-bbd2-11ea-936a-2b0139d8d5a1.jpg 
+ - img: 86269852-02f00780-bbd3-11ea-9f4e-05746fa519bb.jpg 
+ - img: 86270158-77c34180-bbd3-11ea-8fdd-e8b1815fa85c.jpg 
+ - img: 86269100-edc6a900-bbd1-11ea-8d73-9d33d2d9635d.jpg 
+ - img: 86269924-1e5b1280-bbd3-11ea-86a8-398db0f4f477.jpg 
+ - img: 86012685-eb741b80-ba26-11ea-87bc-ae67ac41706a.jpg 
+ - img: 86011605-908df480-ba25-11ea-86a5-5a45ad14ce36.jpg 
+ - img: 86270004-3af74a80-bbd3-11ea-99f5-cd6125e77097.jpg 
+ - img: 86270092-5a8e7300-bbd3-11ea-8bdc-d60fbc7095eb.jpg 
+ - img: 86269579-a0970700-bbd2-11ea-8261-db7a7e91603e.jpg 
+ - img: 86270265-a2ad9580-bbd3-11ea-965b-6f01a3857ab8.jpg 
+ - img: 86269684-c6241080-bbd2-11ea-8a36-3357079039b6.jpg 
+ - img: 86269753-e18f1b80-bbd2-11ea-870e-9f96befd2941.jpg 
 
-defaults:
-  -
-    scope:
-      path: ""
-      type: "photos"
-    values:
-      layout: "photos"
+photos-baseurl: https://user-images.githubusercontent.com/5324594/
