added naxos photos

--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,15 @@ minima:
     github: epidrome
 
 photos:
+ - img: 86012685-eb741b80-ba26-11ea-87bc-ae67ac41706a.jpg
+ - img: 87747841-07383980-c7fd-11ea-9309-bd07895de73e.jpg
+ - img: 87747774-da842200-c7fc-11ea-90dd-9956a89080a0.jpg
  - img: 86270309-b822bf80-bbd3-11ea-9e17-889dc37ef25b.jpg 
  - img: 86269433-69285a80-bbd2-11ea-936a-2b0139d8d5a1.jpg 
  - img: 86269852-02f00780-bbd3-11ea-9f4e-05746fa519bb.jpg 
  - img: 86270158-77c34180-bbd3-11ea-8fdd-e8b1815fa85c.jpg 
  - img: 86269100-edc6a900-bbd1-11ea-8d73-9d33d2d9635d.jpg 
  - img: 86269924-1e5b1280-bbd3-11ea-86a8-398db0f4f477.jpg 
- - img: 86012685-eb741b80-ba26-11ea-87bc-ae67ac41706a.jpg 
  - img: 86011605-908df480-ba25-11ea-86a5-5a45ad14ce36.jpg 
  - img: 86270004-3af74a80-bbd3-11ea-99f5-cd6125e77097.jpg 
  - img: 86270092-5a8e7300-bbd3-11ea-8bdc-d60fbc7095eb.jpg 
