--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ minima:
   skin: dark
   social_links:
     github: epidrome
+    instagram: epidrome
 
 photos:
  - img: 109322146-9b21b780-785a-11eb-8e42-f91774454667.jpg
