--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   at the respective Github Issue.
 
 # Build settings
-remote_theme: jekyll/minima
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
   - jekyll-seo-tag
 
 minima:
