--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ photos:
  - img: 86269579-a0970700-bbd2-11ea-8261-db7a7e91603e.jpg 
  - img: 86270265-a2ad9580-bbd3-11ea-965b-6f01a3857ab8.jpg 
  - img: 86269684-c6241080-bbd2-11ea-8a36-3357079039b6.jpg 
- - img: 86269753-e18f1b80-bbd2-11ea-870e-9f96befd2941.jpg 
+ - img: 86269753-e18f1b80-bbd2-11ea-870e-9f96befd2941.jpg
+ - img: 75c4aa54-59e7-4f34-aba0-35ddada73d8e
 
 photos-baseurl: https://user-images.githubusercontent.com/5324594/
