moved images to the uploadcare platform

--- a/_config.yml
+++ b/_config.yml
@@ -20,30 +20,23 @@ minima:
     github: epidrome
 
 photos:
- - img: 109322146-9b21b780-785a-11eb-8e42-f91774454667.jpg
- - img: 109322008-775e7180-785a-11eb-8e63-705db73f6558.jpg
- - img: 109321878-5433c200-785a-11eb-8467-10b331297e74.jpg
- - img: 109321767-35cdc680-785a-11eb-929c-82dcd51d7515.jpg
- - img: 109314937-9fe26d80-7852-11eb-9c4e-8d1564d47ff6.jpg
- - img: 109315159-e5069f80-7852-11eb-88c2-75dcf545fa7f.jpg
- - img: 109315222-fbacf680-7852-11eb-9745-02d2f92b603d.jpg
- - img: 87747841-07383980-c7fd-11ea-9309-bd07895de73e.JPG
- - img: 87747774-da842200-c7fc-11ea-90dd-9956a89080a0.JPG
- - img: 109314593-37938c00-7852-11eb-895a-3d3d08e91de4.jpg
- - img: 86012685-eb741b80-ba26-11ea-87bc-ae67ac41706a.jpg
- - img: 86270309-b822bf80-bbd3-11ea-9e17-889dc37ef25b.jpg 
- - img: 86269433-69285a80-bbd2-11ea-936a-2b0139d8d5a1.jpg 
- - img: 86269852-02f00780-bbd3-11ea-9f4e-05746fa519bb.jpg 
- - img: 86270158-77c34180-bbd3-11ea-8fdd-e8b1815fa85c.jpg 
- - img: 86269100-edc6a900-bbd1-11ea-8d73-9d33d2d9635d.jpg 
- - img: 86269924-1e5b1280-bbd3-11ea-86a8-398db0f4f477.jpg 
- - img: 86011605-908df480-ba25-11ea-86a5-5a45ad14ce36.jpg 
- - img: 86270004-3af74a80-bbd3-11ea-99f5-cd6125e77097.jpg 
- - img: 86270092-5a8e7300-bbd3-11ea-8bdc-d60fbc7095eb.jpg 
- - img: 86269579-a0970700-bbd2-11ea-8261-db7a7e91603e.jpg 
- - img: 86270265-a2ad9580-bbd3-11ea-965b-6f01a3857ab8.jpg 
- - img: 86269684-c6241080-bbd2-11ea-8a36-3357079039b6.jpg 
- - img: 86269753-e18f1b80-bbd2-11ea-870e-9f96befd2941.jpg
- - img: 75c4aa54-59e7-4f34-aba0-35ddada73d8e
+ - img: 9cef9601-5f7a-49e9-84d3-b3fa0bc893d1
+ - img: 52e79482-b93e-4528-9982-f7693a5316c0
+ - img: 2ce82909-9d5c-40de-b0ba-4a0659f5d922
+ - img: 05ffc93b-ed01-4eeb-a8a4-7ba5ae7bca98
+ - img: 4662cfea-7a23-4f33-9faa-ffedc38552af
+ - img: 233a27e5-828d-41ab-b592-8c26e3517c62
+ - img: 0a7ad746-a195-4c68-ae5b-06628abb4a1c
+ - img: b8ba61a1-c129-4514-8f0a-c02c85431e8a
+ - img: 9057b629-2e5f-4e46-b459-908ff054b590
+ - img: 7ef8df53-c32e-4ab7-a700-6eca40d247b5
+ - img: bbc492c6-a149-4493-9a78-337fbfb5e4ed
+ - img: 12b98174-2536-448a-b31c-52ed7b7c7774
+ - img: 1ac86098-2f45-4103-89ff-308232598fb0
+ - img: 8d80240f-c343-4c76-a867-51faf0fe6108
+ - img: dd48ac0b-f7c9-4691-9225-20c85359685c
+ - img: bf6904f8-5ead-4239-a023-589c757eb2c9 
+ - img: 342fea0b-f1e0-44e3-8040-37f3c9c02936 
+ - img: b87e5d70-40e7-4ab1-966b-6a6a7a3bc060 
 
-photos-baseurl: https://user-images.githubusercontent.com/5324594/
+photos-baseurl: https://ucarecdn.com/
